--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
     background-image: url('../images/custom-chatbots-1.jpg');
     background-size: cover;
     height: 330px;
-    background-position: 0 -32px;
+    /* background-position: 0 -32px; */
 }
 .data-infrastructure-page-banner .inner_banner_text{
 	width: 75%;
